force-app/main/default/objects/Data_Freeze__c/Data_Freeze__c.object-meta.xml
<CustomObject>
    <description>JG 02.09.22</description>
    <label>Data Asset</label>
    <nameField>
        <label>Data Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>