force-app/main/default/objects/Data_Freeze__c/fields/AGDS_Lead__c.field-meta.xml
<CustomField>
    <fullName>AGDS_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AGDS Lead</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipName>Data_Freezes4</relationshipName>
    <type>Lookup</type>
</CustomField>