force-app/main/default/objects/Data_Freeze__c/fields/Analysis_Ready_Datasets__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Ready_Datasets__c</fullName>
    <label>Analysis Ready Datasets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exome</fullName>
            </value>
            <value>
                <fullName>Imputed</fullName>
            </value>
            <value>
                <fullName>ODS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>