force-app/main/default/objects/Data_Freeze__c/fields/Ancestry_EAS__c.field-meta.xml
<CustomField>
    <fullName>Ancestry_EAS__c</fullName>
    <label>Ancestry-EAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>