force-app/main/default/objects/Data_Freeze__c/fields/CEDARS_Ingestion_Association_Results__c.field-meta.xml
<CustomField>
    <fullName>CEDARS_Ingestion_Association_Results__c</fullName>
    <label>CEDARS Ingestion Association Results</label>
    <length>250</length>
    <type>Text</type>
</CustomField>