force-app/main/default/objects/Data_Freeze__c/fields/Clinical_Informatics_Lead__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Informatics_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Informatics Lead</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipName>Data_Freezes1</relationshipName>
    <type>Lookup</type>
</CustomField>