force-app/main/default/objects/Data_Freeze__c/fields/Collaboration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity__c</fullName>
    <label>Collaboration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Data_Freezes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>