force-app/main/default/objects/Data_Freeze__c/fields/Datasets_Registered__c.field-meta.xml
<CustomField>
    <fullName>Datasets_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datasets Registered in PRMS</label>
    <type>Checkbox</type>
</CustomField>