force-app/main/default/objects/Data_Freeze__c/fields/DNAnexus_ID__c.field-meta.xml
<CustomField>
    <fullName>DNAnexus_ID__c</fullName>
    <label>DNAnexus ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>