force-app/main/default/objects/Data_Freeze__c/fields/EHR__c.field-meta.xml
<CustomField>
    <fullName>EHR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EHR Cohort</label>
    <type>Checkbox</type>
</CustomField>