force-app/main/default/objects/Data_Freeze__c/fields/First_Pass_Analysis__c.field-meta.xml
<CustomField>
    <fullName>First_Pass_Analysis__c</fullName>
    <label>First Pass Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>