force-app/main/default/objects/Data_Freeze__c/fields/Genetic_Freeze_name__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Freeze_name__c</fullName>
    <label>Genetic Data Freeze Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>