force-app/main/default/objects/Data_Freeze__c/fields/Genome_Informatics_Lead__c.field-meta.xml
<CustomField>
    <fullName>Genome_Informatics_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genome Informatics Lead</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipName>Data_Freezes2</relationshipName>
    <type>Lookup</type>
</CustomField>