force-app/main/default/objects/Data_Freeze__c/fields/Genomic_Data_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Genomic_Data_Freeze__c</fullName>
    <label>Genetic Data Freeze Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>