force-app/main/default/objects/Data_Freeze__c/fields/Has_Self_Reported_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Self_Reported_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Self Reported Data</label>
    <type>Checkbox</type>
</CustomField>