force-app/main/default/objects/Data_Freeze__c/fields/Key_Updates__c.field-meta.xml
<CustomField>
    <fullName>Key_Updates__c</fullName>
    <label>Key Updates</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>