force-app/main/default/objects/Data_Freeze__c/fields/Lab_Results__c.field-meta.xml
<CustomField>
    <fullName>Lab_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lab Results</label>
    <type>Checkbox</type>
</CustomField>