force-app/main/default/objects/Data_Freeze__c/fields/Link_to_Pheweb__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Pheweb__c</fullName>
    <label>Link to PheWeb</label>
    <type>Url</type>
</CustomField>