force-app/main/default/objects/Data_Freeze__c/fields/Longitudinal__c.field-meta.xml
<CustomField>
    <fullName>Longitudinal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Longitudinal</label>
    <type>Checkbox</type>
</CustomField>