force-app/main/default/objects/Data_Freeze__c/fields/Number_of_Other_Traits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Other_Traits__c</fullName>
    <label>Number of Other Traits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>