force-app/main/default/objects/Data_Freeze__c/fields/Patients_with_production_phenotype_data__c.field-meta.xml
<CustomField>
    <fullName>Patients_with_production_phenotype_data__c</fullName>
    <label>Patients with production phenotype data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>