force-app/main/default/objects/Data_Freeze__c/fields/Phenotype_Data_Comments__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Data_Comments__c</fullName>
    <label>Phenotype Data Comments</label>
    <type>TextArea</type>
</CustomField>