force-app/main/default/objects/Data_Freeze__c/fields/Phenotype_Data_Location__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Data_Location__c</fullName>
    <label>CI Production Phenotype Data Location</label>
    <type>Url</type>
</CustomField>