force-app/main/default/objects/Data_Freeze__c/fields/Phenotype_Data_Received__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Data_Received__c</fullName>
    <label>Collaborator Phenotype Data Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>