force-app/main/default/objects/Data_Freeze__c/fields/Phenotype_Dataset_ID__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Dataset_ID__c</fullName>
    <label>Phenotype Dataset ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>