force-app/main/default/objects/Data_Freeze__c/fields/Phenotype_Matrices__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Matrices__c</fullName>
    <label>CI Production Phenotype Matrices</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>