force-app/main/default/objects/Data_Freeze__c/fields/Procedures__c.field-meta.xml
<CustomField>
    <fullName>Procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedures</label>
    <type>Checkbox</type>
</CustomField>