force-app/main/default/objects/Data_Freeze__c/fields/Related_Data_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_Data_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Data Asset</label>
    <referenceTo>Data_Freeze__c</referenceTo>
    <relationshipLabel>Data Assets</relationshipLabel>
    <relationshipName>Data_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>