force-app/main/default/objects/Data_Freeze__c/fields/Samples_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Samples_Delivered__c</fullName>
    <label>Samples Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>