force-app/main/default/objects/Data_Freeze__c/fields/Samples_Received__c.field-meta.xml
<CustomField>
    <fullName>Samples_Received__c</fullName>
    <label>Samples Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>