force-app/main/default/objects/Data_Freeze__c/fields/Sequencing_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Sequencing_Completion_Date__c</fullName>
    <label>Sequencing Completion Date</label>
    <type>Date</type>
</CustomField>