force-app/main/default/objects/Data_Freeze__c/fields/Status_of_AllxAll_association_analyses__c.field-meta.xml
<CustomField>
    <fullName>Status_of_AllxAll_association_analyses__c</fullName>
    <label>Status of AllxAll association analyses</label>
    <type>TextArea</type>
</CustomField>