force-app/main/default/objects/Data_Freeze__c/fields/TAG_Lead__c.field-meta.xml
<CustomField>
    <fullName>TAG_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAG Lead</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipName>Data_Freezes3</relationshipName>
    <type>Lookup</type>
</CustomField>