force-app/main/default/objects/Data_Freeze__c/fields/Total_Samples_Expected2__c.field-meta.xml
<CustomField>
    <fullName>Total_Samples_Expected2__c</fullName>
    <formula>Collaboration_Opportunity__r.Total_Samples_Master__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Samples Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>