force-app/main/default/objects/Data_Freeze__c/fields/Tubes_Sent_to_Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Tubes_Sent_to_Collaborator__c</fullName>
    <label>Tubes Sent to Collaborator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>