force-app/main/default/objects/Data_Freeze__c/fields/YOGA_Pheweb_Ingestion_Status__c.field-meta.xml
<CustomField>
    <fullName>YOGA_Pheweb_Ingestion_Status__c</fullName>
    <label>YOGA/Pheweb Ingestion Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>