force-app/main/default/objects/Data_Freeze__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Valid__c</columns>
    <columns>Samples_Sequenced__c</columns>
    <columns>Production_Asset_Type__c</columns>
    <columns>Collaboration_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>