force-app/main/default/objects/Data_Freeze__c/listViews/Clinical_Informatics_outstanding_dataset.listView-meta.xml
<ListView>
    <fullName>Clinical_Informatics_outstanding_dataset</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Clinical_Informatics_Lead__c</columns>
    <columns>Phenotype_Data_Location__c</columns>
    <columns>Phenotype_Data_Received__c</columns>
    <columns>Production_Asset_Type__c</columns>
    <columns>Key_Updates__c</columns>
    <columns>Phenotype_Matrices__c</columns>
    <columns>Datasets_Registered__c</columns>
    <columns>ETA_completed_Registration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phenotype_Matrices__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <filters>
        <field>Phenotype_Matrices__c</field>
        <operation>equals</operation>
        <value>Completed,Complete</value>
    </filters>
    <label>CI Datasets in Progress</label>
</ListView>