force-app/main/default/objects/Data_Freeze__c/listViews/Production_Runs.listView-meta.xml
<ListView>
    <fullName>Production_Runs</fullName>
    <columns>NAME</columns>
    <columns>Production_Asset_Type__c</columns>
    <columns>Phenotype_Data_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Production_Asset_Type__c</field>
        <operation>notEqual</operation>
        <value>Phenotype Matrix</value>
    </filters>
    <label>Production Runs</label>
</ListView>